Move assets to public folder

--- a/src/styles/TimeWidget.css
+++ b/src/styles/TimeWidget.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: Lequire;
-  src: url(../assets/fonts/Lequire-Regular.ttf);
+  src: url(assets/fonts/Lequire-Regular.ttf);
 }
 
 .time-separator {
