--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color: black;
-  background-image: url(assets/images/desert.png);
+  background-image: url(/assets/images/desert.png);
   background-position: center;
   background-size: cover;
 }
